hydroflow/tests/compile-fail/surface_badgeneric_type.stderr
error: `defer_tick` should have exactly 0 generic type arguments, actually has 1.
 --> tests/compile-fail/surface_badgeneric_type.rs:6:44
  |
6 |         source_iter(0..10) -> defer_tick::<usize>() -> for_each(std::mem::drop);
  |                                            ^^^^^
